room: Make username parameter to send_identify() optional

Not all NickServ bots understand the username parameter, so the
identify command we send doesn't work at all on those networks.
We will address this by not sending the username unconditionally,
so as a first step make the parameter optional.

https://bugzilla.gnome.org/show_bug.cgi?id=772915